# hw_test

./: Makefile  README.md  Solution_description.pptx  pyproject.toml
hw_test/: definitions.py  utils.py  validation.py  visualisation.py
notebooks/: profiling_report.html
